--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
 <img src="bg.png" alt="Ley73">
+<style>
+  html, body {
+    height: 100%;
+    margin: 0;
+    padding: 0;
+}
+
+img {
+    padding: 0;
+    display: block;
+    margin: 0 auto;
+    max-height: 100%;
+    max-width: 100%;
+}
+</style>
