--- a/index.html
+++ b/index.html
@@ -1,11 +1,14 @@
-<img src="bg.png" alt="Ley73">
+<body>
+  <a href="https://www.youtube.com/playlist?list=PLaITvYKgKfAE3TaJpwLeJ4lsq9Ik3_k7N">My playlist <3</a>
+  <img src="bg.png" alt="Ley73">
+</body>
+
 <style>
   html, body {
     height: 100%;
     margin: 0;
     padding: 0;
 }
-
 img {
     padding: 0;
     display: block;
