--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-  <button type="button"><a href="https://www.youtube.com/playlist?list=PLaITvYKgKfAE3TaJpwLeJ4lsq9Ik3_k7N">My playlist <3</a></button>
+  <a href="https://www.youtube.com/playlist?list=PLaITvYKgKfAE3TaJpwLeJ4lsq9Ik3_k7N"><button>My playlist <3</button></a>
   <img src="bg.png" alt="Ley73">
 </body>
 
