--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <body>
-  <a href="https://www.youtube.com/playlist?list=PLaITvYKgKfAE3TaJpwLeJ4lsq9Ik3_k7N"><button>My playlist <3</button></a>
+  <a href="https://www.youtube.com/playlist?list=PLaITvYKgKfAE3TaJpwLeJ4lsq9Ik3_k7N" style="margin:20px"><button>My playlist <3</button></a>
   <img src="bg.png" alt="Ley73">
 </body>
 
@@ -11,9 +11,9 @@
 }
 img {
     padding: 0;
-    display: block;
+    display: flex;
     margin: 0 auto;
-    max-height: 100%;
-    max-width: 100%;
+    max-height: 90%;
+    max-width: 90%;
 }
 </style>
